# data-tamer-py

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: pypi-publish.yml  testpypi-publish.yml
data_tamer/: __init__.py  batch.py  core.py  prompt.py  schema.py  types.py
examples/: generate_object_example.py  jsonschema_example.py  legacy_contacts.py  transform_batch_example.py
tests_py/: conftest.py  test_async_batch.py  test_jsonschema.py  test_prompt.py  test_pydantic_jsonschema.py  test_stream.py
