[project]
name = "data-tamer"
version = "0.1.2"
description = "Python port of data-tamer using LiteLLM for structured outputs and batching"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Sebastian Lewis"}]
license = "MIT"
dependencies = [
  "litellm>=1.44.0",
  "pydantic>=2.0.0",
  "jsonschema>=4.18.0",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
keywords = ["llm", "structured-output", "pydantic", "jsonschema", "batching", "litellm"]

[project.urls]
Homepage = "https://github.com/seb-lewis/data-tamer"
Repository = "https://github.com/seb-lewis/data-tamer"
Issues = "https://github.com/seb-lewis/data-tamer/issues"

[tool.uv]
dev-dependencies = [
  "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["data_tamer*"]
